--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  dio: ^5.4.2+1
+  either_dart: ^1.0.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
