--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.4.2+1
@@ -35,8 +36,10 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
   font_awesome_flutter: ^10.7.0
   get: ^4.6.6
+  get_it: 7.6.7
   go_router: ^13.2.2
 
 dev_dependencies:
