--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get: ^4.6.6
   get_it: ^7.6.7
   go_router: ^13.2.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
